--- a/wb/index.html
+++ b/wb/index.html
@@ -6,5 +6,9 @@
 <h2>My Second Heading</h2>
 <p>My first paragraph.</p>
 
+<h1>My First Heading</h1>
+<h2>My Second Heading</h2>
+<p>My first paragraph.</p>
+
 </body>
 </html>
